@@ -1,76 +1,0 @@
-#!/bin/sh
-
-# This is a RackTables gateway for installing SLB configuration onto
-# a live load balancer. The only supported command is:
-#
-# * connect <endpoint> <hardware> <software> <username>: authorize transaction
-# * activate <filename>: call user-supplied configuration installer
-#
-
-endpoint=
-hw=
-sw=
-user=
-cfgfile=
-CONNECTED=0
-MYDIR=`dirname $0`
-
-do_connect()
-{
-	endpoint=`echo $args | cut -s -d' ' -f1`
-	hw=`echo $args | cut -s -d' ' -f2`
-	sw=`echo $args | cut -s -d' ' -f3`
-	user=`echo $args | cut -s -d' ' -f4`
-	# sanity checks
-	if [ -z "$endpoint" -o -z "$hw" -o -z "$sw" -o -z "$user" ]; then
-		echo 'ERR!too few arguments to connect'
-		return
-	fi
-
-	CONNECTED=1
-	echo "OK!connected to $endpoint"
-}
-
-do_activate()
-{
-	cfgfile=$1
-	if [ ! -s "$cfgfile" ]; then
-		echo "ERR!Configuration file $cfgfile is either missing or empty."
-		return
-	fi
-	if [ ! -x "$MYDIR/install" ]; then
-		echo "ERR!Missing or not executable user-supplied installer script $MYDIR/install"
-		return
-	fi
-	"$MYDIR/install" $endpoint $hw $sw $user $cfgfile
-	ret=$?
-	if [ $ret = 0 ]; then
-		echo "OK!Configuration has been submitted for activation successfully"
-	else
-		echo "ERR!Configuration installer returned code $ret"
-	fi
-}
-
-# main loop
-while read cmd args; do
-	case $cmd in
-		connect)
-			if [ $CONNECTED = 1 ]; then
-				echo 'ERR!Already connected'
-			else
-				do_connect $args
-			fi
-			;;
-		activate)
-			if [ $CONNECTED = 1 ]; then
-				do_activate $args
-			else
-				echo 'ERR!Not connected'
-			fi
-			;;
-		*)
-			echo "ERR!unknown command $cmd"
-	esac
-done
-
-exit 0
