@@ -1345,7 +1345,7 @@ function submitSLBConfig ()
 {
 	assertUIntArg ('object_id', __FUNCTION__);
 	$newconfig = buildLVSConfig ($_REQUEST['object_id']);
-	$msglog = activateSLBConfig ($_REQUEST['object_id'], html_entity_decode ($newconfig, ENT_QUOTES, 'UTF-8'));
+	$msglog = gwSendFile ($_REQUEST['object_id'], 'slbconfig', html_entity_decode ($newconfig, ENT_QUOTES, 'UTF-8'));
 	return buildWideRedirectURL ($msglog);
 }
 
